--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -77,6 +77,9 @@
       <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="" />
+      <meta-data 
+            android:name="com.mendix.mendixnative.CookieEncryption" 
+            android:value="${cookieEncryption}" />
     </application>
 
 </manifest>
