--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -23,3 +23,4 @@ android.disableResourceValidation=true
 android.nonTransitiveRClass=true
 android.suppressUnsupportedCompileSdk=33
 hermesEnabled=true
+com.mendix.mendixnative.cookieEncryption=false
