--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-native-community/cameraroll": "4.0.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-masked-view/masked-view": "0.3.1",
-    "@react-native-community/netinfo": "^11.3.2",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-native-community/push-notification-ios": "1.10.1",
     "@react-native-picker/picker": "2.8.1",
     "@react-navigation/native": "6.1.18",
@@ -21,7 +21,7 @@
     "react-native-device-info": "13.0.0",
     "react-native-fast-image": "8.6.3",
     "react-native-gesture-handler": "2.20.2",
-    "react-native-image-picker": "5.0.1",
+    "react-native-image-picker": "7.2.3",
     "react-native-localize": "3.2.1",
     "react-native-pager-view": "6.4.1",
     "react-native-permissions": "4.1.5",
@@ -29,7 +29,7 @@
     "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "4.11.0",
     "react-native-schedule-exact-alarm-permission": "^0.1.3",
-    "react-native-screens": "3.29.0",
+    "react-native-screens": "4.4.0",
     "react-native-splash-screen": "3.2.0",
     "react-native-svg": "15.7.1",
     "react-native-tab-view": "3.5.2",
