--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         buildToolsVersion = "35.0.0"
-        minSdkVersion = 23
+        minSdkVersion = 24
         compileSdkVersion = 35
         targetSdkVersion = 35
         kotlin_version = "1.9.24"
@@ -37,6 +37,15 @@ buildscript {
 }
 
 allprojects {
+    afterEvaluate {
+        if (it.hasProperty('android')){
+            android {
+                defaultConfig {
+                    minSdkVersion 24 
+                }
+            }
+        }
+    }
     repositories {
         all { repo ->
             println repo.url.toString()
