--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
   "dependencies": {
-    "@mendix/native": "9.0.1",
+    "@mendix/native": "./mendix-native-10.0.1.tgz",
     "@op-engineering/op-sqlite": "11.4.9",
     "@swan-io/react-native-browser": "0.4.1",
     "@react-native-async-storage/async-storage": "2.0.0",
