--- a/package.json
+++ b/package.json
@@ -7,22 +7,23 @@
     "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
   "dependencies": {
-    "@mendix/native": "9.0.1",
+    "@gorhom/bottom-sheet": "^5.1.1",
+    "@mendix/native": "9.0.4",
     "@op-engineering/op-sqlite": "9.2.7",
-    "@swan-io/react-native-browser": "0.4.1",
     "@react-native-async-storage/async-storage": "2.0.0",
     "@react-native-camera-roll/camera-roll": "7.4.0",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-masked-view/masked-view": "0.3.1",
-    "@react-native-community/netinfo": "11.4.1",
-    "@react-native-community/push-notification-ios": "1.10.1",
-    "@react-native-picker/picker": "2.11.0",
-    "@react-navigation/native": "6.1.18",
-    "@gorhom/bottom-sheet": "^5.1.1",
-    "react-native": "0.77.1",
     "@react-native-community/cli": "16.0.2",
     "@react-native-community/cli-platform-android": "16.0.2",
     "@react-native-community/cli-platform-ios": "16.0.2",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-native-community/push-notification-ios": "1.10.1",
+    "@react-native-masked-view/masked-view": "0.3.1",
+    "@react-native-picker/picker": "2.11.0",
+    "@react-navigation/native": "6.1.18",
+    "@swan-io/react-native-browser": "0.4.1",
+    "react-native": "0.77.1",
+    "react-native-blob-util": "0.21.2",
     "react-native-device-info": "13.0.0",
     "react-native-fast-image": "8.6.3",
     "react-native-gesture-handler": "2.23.1",
