--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.1.1",
-    "@mendix/native": "10.1.4",
+    "@mendix/native": "10.1.6",
     "@op-engineering/op-sqlite": "12.0.2",
     "@react-native-async-storage/async-storage": "2.0.0",
     "@react-native-camera-roll/camera-roll": "7.4.0",
@@ -22,9 +22,10 @@
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "6.1.18",
     "@swan-io/react-native-browser": "0.4.1",
+    "@notifee/react-native": "9.1.8",
     "react-native": "0.77.1",
+    "react-native-device-info": "14.0.4",
     "react-native-blob-util": "0.21.2",
-    "react-native-device-info": "13.0.0",
     "react-native-fast-image": "8.6.3",
     "react-native-gesture-handler": "2.23.1",
     "react-native-image-picker": "7.2.3",
