--- a/.github/workflows/ios-build-custom-dev-app.yml
+++ b/.github/workflows/ios-build-custom-dev-app.yml
@@ -17,11 +17,11 @@ jobs:
         run: | 
           sudo xcode-select -s /Applications/Xcode_15.4.app
 
-      - name: log environment variables
-        shell: bash
-        working-directory: ./
+      - name: Log provision profile content (debug only)
         run: |
-          echo "$IOS_DUMMY_PROVISION" | base64 --decode
+          echo "$IOS_DUMMY_PROVISION" | base64 --decode | security cms -D - | plutil -extract Name xml1 -o - -
+        env:
+          IOS_DUMMY_PROVISION: ${{ secrets.IOS_DUMMY_PROVISION }}
 
       - name: update bundle identifier in Dev config
         shell: bash
