--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
   "dependencies": {
-    "@mendix/native": "./mendix-native-6.0.4-rc.1.tgz",
+    "@mendix/native": "6.0.4-nt",
     "@mendix/react-native-sqlite-storage": "^7.1.0",
     "@react-native-async-storage/async-storage": "2.0.0",
     "@react-native-community/cameraroll": "4.0.1",
