--- a/android/build.gradle
+++ b/android/build.gradle
@@ -65,6 +65,9 @@ allprojects {
             url "https://maven.scijava.org/content/repositories/jcenter/"
         }
         maven { url "https://packages.rnd.mendix.com/jcenter" }
+        maven {
+            url "$rootDir/../node_modules/@notifee/react-native/android/libs"
+        }
     }
 }
 
