--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,4 @@ android.suppressUnsupportedCompileSdk=33
 newArchEnabled=false
 hermesEnabled=true
 mendixnative.cookieEncryption=false
+VisionCamera_enableCodeScanner=true
