--- a/.github/workflows/ios-build-custom-dev-app.yml
+++ b/.github/workflows/ios-build-custom-dev-app.yml
@@ -9,13 +9,13 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: macos-15
 
     steps:
       - uses: actions/checkout@v3
-      - name: switch XCode to 16
+      - name: switch XCode to 15.4
         run: | 
-          sudo xcode-select -s /Applications/Xcode_16.app
+          sudo xcode-select -s /Applications/Xcode_15.4.app
 
       - name: update bundle identifier in Dev config
         shell: bash
