--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
   "dependencies": {
+    "@d11/react-native-fast-image": "8.11.1",
     "@gorhom/bottom-sheet": "^5.1.1",
     "@mendix/native": "10.2.0",
     "@op-engineering/op-sqlite": "12.0.2",
@@ -22,7 +23,6 @@
     "react-native": "0.77.3",
     "react-native-device-info": "14.0.4",
     "react-native-blob-util": "0.21.2",
-    "react-native-fast-image": "8.6.3",
     "react-native-gesture-handler": "2.23.1",
     "react-native-image-picker": "7.2.3",
     "react-native-localize": "3.2.1",
