--- a/.mx/known_dependencies.json
+++ b/.mx/known_dependencies.json
@@ -2,7 +2,6 @@
     "@react-native-firebase/app": "17.3.0",
     "@react-native-firebase/messaging": "17.3.0",
     "@react-native-firebase/crashlytics": "17.3.0",
-    "@react-native-community/push-notification-ios": "1.10.1",
-    "react-native-push-notification": "8.1.1",
+    "@notifee/react-native": "9.1.8",
     "react-native-maps": "0.31.1"
 }
